<resources>
    <string name="app_name">Project v2</string>
    <string name="my_notes">My Notes</string>
    <string name="search_note">Search note</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">type note here</string>
    <string name="show_dialog">Show Dialog</string>
    <string name="confirm">Confirm</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
</resources>